2006-07-20  Prakash Punnoor <prakash@punnoor.de>

	* src/backends/alc_backend_alsa.c: Chris: fixing a problem with the ALSA
	backend using the snd_pcm_format_size function instead of the
	psnd_pcm_format_size function pointer when dynamically loading the lib

2006-07-11  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: added checks for Cygwin
	
2006-07-11  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am: Include admin/CMakeModules/SelectArgtypes.c.in in source
	distributions.

	* src/backends/alc_backend_windows.c: MMSYSTEM backend fixes based on
	patches from Brian Keener <bkeener@thesoftwaresource.com>. Not really
	tested, but at least things compile under Cygwin.

	* configure.ac, src/backends/alc_backend_oss.c: Added autoconf magic for
	ioctl on Cygwin.

	* src/alc/alc_device.c, src/config/al_config.c: Config file parsing
	improvements based on patches from Brian Keener
	<bkeener@thesoftwaresource.com>. Still not perfect (e.g. for config
	files consisting of comments only), but a bit better. The whole
	Scheme-like parsing/evaluation engine needs a rewrite.

2006-07-10  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend_oss.c: Set preferred buffer size. Fixed open
	mode.

2006-07-05  Sven Panne  <sven.panne@aedion.de>

	* src/al_mixer.c, src/al_types.h, src/alc/alc_context.c,
	src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_alsa.c, src/backends/alc_backend_arts.c,
	src/backends/alc_backend_esd.c, src/backends/alc_backend_irix.c,
	src/backends/alc_backend_null.c, src/backends/alc_backend_oss.c,
	src/backends/alc_backend_sdl.c, src/backends/alc_backend_wave.c,
	src/extensions/al_ext_loki.c: Make the backend details abstract, so only
	device handling and the backends themselves know the details.

	* src/backends/alc_backend_wave.c: Open the output file without any race
	conditions or security risks. General cleanup. Fixed endianess, sample
	size and WAVE header issues.
