@@ -1,3 +1,7 @@
+2006-07-24  Pannes  <sven.panne@aedion.de>
+
+	* src/Makefile.am, src/al_dlopen.c: Compilation fixes for MinGW.
+
 2006-07-20  Prakash Punnoor <prakash@punnoor.de>
 
 	* src/backends/alc_backend_alsa.c: Chris: fixing a problem with the ALSA
